--- a/index.html
+++ b/index.html
@@ -243,8 +243,8 @@
 
     <script>
       // Configuration
-      const API_URL = "http://localhost:8000";
-      const USER_ID = "sdn"; // In a real app, this would come from authentication
+      const API_URL = "https://ai-health-assistant-0art.onrender.com";
+      const USER_ID = "abcd"; // In a real app, this would come from authentication
       marked.setOptions({
         breaks: true,
         sanitize: true,
